<resources>
    <string name="app_name">App Teste</string>

    <string name="action_buscar">Buscar</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_config">Configurações</string>
    <string name="action_exit">Sair</string>

    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="name">Nome</string>
    <string name="text_forgot">Redefinir senha </string>
    <string name="text_initial">Já possui uma conta  ?</string>
    <string name="text_createAccount">Crie a sua conta aqui </string>
    <string name="text">Digite o e-mail associado à sua conta, e enviaremos um link para redefinir a sua senha</string>

    <string name="login">Entrar</string>
    <string name="createAccount">Registrar-se</string>
    <string name="forgot_password">Esqueceu a senha ?</string>
    <string name="nome_usuario">Nome usuario</string>
    <string name="login_methods">OU</string>
    <string name="New_user">Novo usuário ? Crie sua conta aqui</string>

    <string name="nav_disciplinas">Disciplinas</string>
    <string name="nav_mensagem">Mensagens</string>
    <string name="nav_localizacao">Localização</string>
    <string name="nav_favoritos">Favoritos</string>
    <string name="nav_menu">"Menu"</string>
    <string name="nav_sair">"Sair"</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="repositorio">Repositório</string>
    <string name="title_menu">Menu</string>


</resources>
